Fixed the ability to still jump after a pipe is hit

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,3 @@
 body {
-	font-family: 'Press Start 2P', cursive;
+	font-family: 'Press Start 2P', arial;
 }
